# MCP-learning-notes

./: .gitignore  README.md
MCP 学习笔记/: 251118.md  251119.md  Architecture.md  Azure Functions.md  Link.md  MCP Client.md  MCP Server.md  reference servers.md  创建MCP客户端.md  创建MCP服务器.md  基本知識.md  環境構築.md
MCP 学习笔记/遇到的问题/: 20251210-三种Server的区别和使用方法.md  251120-环境变量配置.md  251209-异步环境问题.md
workspace/: deepseek_chatbot.py
workspace/first_mcp_project/: main.py  mcp_chatbot.py  mcp_chatbot_reference_server.py  mcp_chatbot_resources_and_prompt.py  mcp_diagram.txt  pyproject.toml  research_server.py  research_server_resources_and_prompt.py  test.json
workspace/first_mcp_project/others/: mcp_chatbot_ds_failure.py  mcp_summary.md  results.txt
workspace/first_mcp_project/papers/math/: papers_info.json
workspace/first_mcp_project/papers/mcp/: papers_info.json
视频教程代码/: L3.ipynb  L6_中文正确版.ipynb  chatbot_emample.py
